objects/ssot__CollectionPlanItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CollectionPlanId__c</fullName>
        <label>Collection Plan</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionPlanItemStatus__c</fullName>
        <label>Collection Plan Item Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Collection Plan Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceRecordId__c</fullName>
        <label>Refernce Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceRecordObject__c</fullName>
        <label>Reference Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726825132366_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CollectionPlanItem_CollectionPlanId__rel</label>
        <referenceTo>ssot__CollectionPlan__dlm</referenceTo>
        <relationshipLabel>CollectionPlanItem_CollectionPlanId__rel</relationshipLabel>
        <relationshipName>rel_1726825132366_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>